WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134362
Skip memcmp()ing fully downloaded resources after they become mmap()able.
https://bugs.webkit.org/show_bug.cgi?id=134362
Summary
Skip memcmp()ing fully downloaded resources after they become mmap()able.
Andreas Kling
Reported
2014-06-26 14:43:02 PDT
CachedResource::tryReplaceEncodedData() does a memcmp() to check that the data being replaced is exactly equal to the disk-cached version. This is always the case, and we're wasting a bunch of time doing these comparisons. Let's turn them into assertions.
Attachments
Patch
(2.04 KB, patch)
2014-06-26 14:44 PDT
,
Andreas Kling
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-06-26 14:44:37 PDT
Created
attachment 233936
[details]
Patch
Geoffrey Garen
Comment 2
2014-06-26 14:55:59 PDT
Comment on
attachment 233936
[details]
Patch r=me
Andreas Kling
Comment 3
2014-06-26 15:23:07 PDT
Committed
r170499
: <
http://trac.webkit.org/changeset/170499
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug